[package]
name = "mail_crab"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
iced = { version = "0.9.0" }
imap = "2.4.1"
lettre = "0.10.4"
native-tls = "0.2.11"
